--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             <a href="#"><i class='bx bxl-behance' ></i></a>
         </div>
         <div class="home-img">
-            <img src="11.png" alt="">
+            <img src="Ajay.jpg" alt="">
         </div>
         <div class="home-text">
             <span>Hello, I'm</span>
-            <h1>Shantanu Jana</h1>
+            <h1>Ajaykumar</h1>
             <h2>Frontend Developer</h2>
-            <p>Lorem ipsum dolor sit amet cons <br> adipisicing elit. Minima, consectetur <br> ullam?</p>
+            <p>I am looking for an entry-level position to kickstart my career in the software development.</p>
             <a href="#contact" class="btn">Contact Me</a>
         </div>
  
