--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="#"><i class='bx bxl-behance' ></i></a>
         </div>
         <div class="home-img">
-            <img src="Ajay.jpg" alt="">
+            <img src="Ajay0.jpg" alt="">
         </div>
         <div class="home-text">
             <span>Hello, I'm</span>
@@ -58,10 +58,10 @@
         <!-- About Content -->
         <div class="about-container">
             <div class="about-img">
-                <img src="121.jpg" alt="">
+                <img src="Ajay1.jpg" alt="">
             </div>
             <div class="about-text">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis beatae eius quae ab consequatur est perferendis dicta. Ad repellendus perferendis minus sunt error eos dicta enim accusantium ipsum veniam debitis quasi sint cum fugiat porro quam, blanditiis a ratione quod!</p>
+                <p>I'm Ajaykumar Pursuing my Graduation Specialized in Computer Science Engineering, With the Decent Academics with the Percentage of 70 CGPA</p>
                 <div class="information">
                     <!-- Box 1 -->
                     <div class="info-box">
@@ -71,12 +71,12 @@
                     <!-- Box 2 -->
                     <div class="info-box">
                         <i class='bx bxs-phone' ></i>
-                        <span>+1 444 444 4444</span>
+                        <span>9014598936</span>
                     </div>
                     <!-- Box 3 -->
                     <div class="info-box">
                         <i class='bx bxs-envelope' ></i>
-                        <span>project@farin.com</span>
+                        <span>Ajaykumarg.me@gmail.com</span>
                     </div>
                 </div>
                 <a href="#" class="btn">Download Cv</a>
@@ -95,31 +95,37 @@
                 <!-- Box 1 -->
                 <div class="bars-box">
                     <h3>HTML</h3>
-                    <span>94%</span>
+                    <span>85%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar html-bar"></div>
                 </div>
                 <!-- Box 2 -->
                 <div class="bars-box">
                     <h3>CSS</h3>
-                    <span>84%</span>
+                    <span>75%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar css-bar"></div>
                 </div>
                 <!-- Box 3 -->
                 <div class="bars-box">
                     <h3>JavaScript</h3>
-                    <span>74%</span>
+                    <span>70%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar js-bar"></div>
                 </div>
                 <!-- Box 4 -->
                 <div class="bars-box">
-                    <h3>React</h3>
+                    <h3>SQL</h3>
                     <span>80%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar react-bar"></div>
                 </div>
+                <!-- Box 5 -->
+                <div class="bars-box">
+                    <h3>PhP</h3>
+                    <span>80%</span>
+                    <div class="light-bar"></div>
+                    <div class="percent-bar react-bar"></div>
             </div>
             <div class="skills-img">
                 <img src="123.png" alt="">
