--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!-- About Content -->
         <div class="about-container">
             <div class="about-img">
-                <img src="Ajay1.jpg" alt="">
+                <img src="AJAY1.jpg" alt="">
             </div>
             <div class="about-text">
                 <p>I'm Ajaykumar Pursuing my Graduation Specialized in Computer Science Engineering, With the Decent Academics with the Percentage of 70 CGPA</p>
