--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <!-- Box 1 -->
                     <div class="info-box">
                         <i class='bx bxs-user' ></i>
-                        <span>Tasnia Farin</span>
+                        <span>Gadadasu Ajaykumar</span>
                     </div>
                     <!-- Box 2 -->
                     <div class="info-box">
@@ -115,15 +115,21 @@
                 </div>
                 <!-- Box 4 -->
                 <div class="bars-box">
-                    <h3>SQL</h3>
+                    <h3>Python</h3>
                     <span>80%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar react-bar"></div>
                 </div>
                 <!-- Box 5 -->
                 <div class="bars-box">
-                    <h3>PhP</h3>
-                    <span>80%</span>
+                    <h3>SQL</h3>
+                    <span>82%</span>
+                    <div class="light-bar"></div>
+                    <div class="percent-bar react-bar"></div>
+                 <!-- Box 6 -->
+                <div class="bars-box">
+                    <h3>PHP</h3>
+                    <span>75%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar react-bar"></div>
             </div>
@@ -134,13 +140,18 @@
  
     </section>
     <!-- Services -->
-    <section class="services" id="services">
+    <section class="Technologies" id="services">
         <div class="heading">
             <h2>Services</h2>
-            <span>Our Services</span>
+            <span>I Know</span>
         </div>
-        <div class="services-content">
+        <div class="sevices-content">
             <!-- Box 1 -->
+            <div class="services-box">
+                <i class='bx bxl-Python' ></i>
+                <h3>Python Programming</h3>
+                <a href="#">Learn More</a>
+            </div>
             <div class="services-box">
                 <i class='bx bx-code-alt' ></i>
                 <h3>Web Development</h3>
@@ -156,12 +167,6 @@
             <div class="services-box">
                 <i class='bx bx-brush' ></i>
                 <h3>UI/UX Design</h3>
-                <a href="#">Learn More</a>
-            </div>
-
-            <div class="services-box">
-                <i class='bx bxl-wordpress' ></i>
-                <h3>Wordpress Developer</h3>
                 <a href="#">Learn More</a>
             </div>
         </div>
@@ -213,6 +218,7 @@
     <div class="footer">
         <h2>Coding Home</h2>
         <div class="footer-social">
+            <a href="#"><i class='bx bxl-linkdin' ></i></a>
             <a href="#"><i class='bx bxl-facebook' ></i></a>
             <a href="#"><i class='bx bxl-twitter' ></i></a>
             <a href="#"><i class='bx bxl-instagram' ></i></a>
