--- a/index.html
+++ b/index.html
@@ -126,12 +126,6 @@
                     <span>82%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar react-bar"></div>
-                 <!-- Box 6 -->
-                <div class="bars-box">
-                    <h3>PHP</h3>
-                    <span>75%</span>
-                    <div class="light-bar"></div>
-                    <div class="percent-bar react-bar"></div>
             </div>
             <div class="skills-img">
                 <img src="123.png" alt="">
@@ -142,31 +136,33 @@
     <!-- Services -->
     <section class="Technologies" id="services">
         <div class="heading">
-            <h2>Services</h2>
+            <h2>Tech-Skills</h2>
             <span>I Know</span>
         </div>
-        <div class="sevices-content">
+        <div class="Tech-Skills-content">
             <!-- Box 1 -->
-            <div class="services-box">
-                <i class='bx bxl-Python' ></i>
-                <h3>Python Programming</h3>
-                <a href="#">Learn More</a>
+            <div class="Tech-Skills-box">
             </div>
-            <div class="services-box">
+            <div class="Tech-Skills-box">
                 <i class='bx bx-code-alt' ></i>
                 <h3>Web Development</h3>
                 <a href="#">Learn More</a>
             </div>
             <!-- Box 2 -->
-            <div class="services-box">
+            <div class="Tech-Skills-box">
                 <i class='bx bx-server' ></i>
                 <h3>Backend Development</h3>
                 <a href="#">Learn More</a>
             </div>
             <!-- Box 3 -->
-            <div class="services-box">
+            <div class="Tech-Skills-box">
                 <i class='bx bx-brush' ></i>
                 <h3>UI/UX Design</h3>
+                <a href="#">Learn More</a>
+            </div>
+            <!-- Box 4 -->
+            <i class='bx bxl-Python' ></i>
+                <h3>Python Programming</h3>
                 <a href="#">Learn More</a>
             </div>
         </div>
