--- a/index.html
+++ b/index.html
@@ -134,15 +134,13 @@
  
     </section>
     <!-- Services -->
-    <section class="Technologies" id="services">
+    <section class="Technologies" id="Tech-Skills">
         <div class="heading">
             <h2>Tech-Skills</h2>
             <span>I Know</span>
         </div>
         <div class="Tech-Skills-content">
             <!-- Box 1 -->
-            <div class="Tech-Skills-box">
-            </div>
             <div class="Tech-Skills-box">
                 <i class='bx bx-code-alt' ></i>
                 <h3>Web Development</h3>
@@ -161,6 +159,7 @@
                 <a href="#">Learn More</a>
             </div>
             <!-- Box 4 -->
+            <div class="Tech-Skills-box">
             <i class='bx bxl-Python' ></i>
                 <h3>Python Programming</h3>
                 <a href="#">Learn More</a>
