--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#services">Services</a></li>
+            <li><a href="#tech-skills">Services</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
             <div class="bx bx-moon" id="darkmode"></div>
@@ -118,14 +118,14 @@
                     <h3>Python</h3>
                     <span>80%</span>
                     <div class="light-bar"></div>
-                    <div class="percent-bar react-bar"></div>
+                    <div class="percent-bar python-bar"></div>
                 </div>
                 <!-- Box 5 -->
                 <div class="bars-box">
                     <h3>SQL</h3>
                     <span>82%</span>
                     <div class="light-bar"></div>
-                    <div class="percent-bar react-bar"></div>
+                    <div class="percent-bar sql-bar"></div>
             </div>
             <div class="skills-img">
                 <img src="123.png" alt="">
@@ -133,33 +133,33 @@
         </div>
  
     </section>
-    <!-- Services -->
-    <section class="Technologies" id="Tech-Skills">
+    <!-- tech-skills -->
+    <section class="Technologies" id="tech-skills">
         <div class="heading">
-            <h2>Tech-Skills</h2>
+            <h2>tech-skills</h2>
             <span>I Know</span>
         </div>
-        <div class="Tech-Skills-content">
+        <div class="tech-skills-content">
             <!-- Box 1 -->
-            <div class="Tech-Skills-box">
+            <div class="tech-skills-box">
                 <i class='bx bx-code-alt' ></i>
                 <h3>Web Development</h3>
                 <a href="#">Learn More</a>
             </div>
             <!-- Box 2 -->
-            <div class="Tech-Skills-box">
+            <div class="tech-skills-box">
                 <i class='bx bx-server' ></i>
                 <h3>Backend Development</h3>
                 <a href="#">Learn More</a>
             </div>
             <!-- Box 3 -->
-            <div class="Tech-Skills-box">
+            <div class="tech-skills-box">
                 <i class='bx bx-brush' ></i>
                 <h3>UI/UX Design</h3>
                 <a href="#">Learn More</a>
             </div>
             <!-- Box 4 -->
-            <div class="Tech-Skills-box">
+            <div class="tech-skills-box">
             <i class='bx bxl-Python' ></i>
                 <h3>Python Programming</h3>
                 <a href="#">Learn More</a>
