--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#tech-skills">Services</a></li>
+            <li><a href="#tech-skills">Technologies</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
             <div class="bx bx-moon" id="darkmode"></div>
@@ -160,7 +160,7 @@
             </div>
             <!-- Box 4 -->
             <div class="tech-skills-box">
-            <i class='bx bxl-Python' ></i>
+            <i class='bx bxl-python' ></i>
                 <h3>Python Programming</h3>
                 <a href="#">Learn More</a>
             </div>
@@ -213,7 +213,7 @@
     <div class="footer">
         <h2>Coding Home</h2>
         <div class="footer-social">
-            <a href="#"><i class='bx bxl-linkdin' ></i></a>
+            <a href="#"><i class='bx bxl-linkedin' ></i></a>
             <a href="#"><i class='bx bxl-facebook' ></i></a>
             <a href="#"><i class='bx bxl-twitter' ></i></a>
             <a href="#"><i class='bx bxl-instagram' ></i></a>
