--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navbar -->
     <header>
-        <a href="#" class="logo">Coding Home</a>
+        <a href="#" class="logo">About Ajaykumar</a>
  
         <div class="bx bx-menu" id="menu-icon"></div>
  
@@ -34,8 +34,8 @@
     <section class="home" id="home">
         <div class="social">
             <a href="#"><i class='bx bxl-github'></i></a>
-            <a href="#"><i class='bx bxl-dribbble' ></i></a>
-            <a href="#"><i class='bx bxl-behance' ></i></a>
+            <a href="#"><i class='bx bxl-linkedin' ></i></a>
+            <a href="#"><i class='bx bxl-gmail' ></i></a>
         </div>
         <div class="home-img">
             <img src="Ajay0.jpg" alt="">
@@ -198,7 +198,7 @@
     <section class="contact" id="contact">
         <div class="heading">
             <h2>Contact</h2>
-            <span>Connect With Us</span>
+            <span>Connect With me</span>
         </div>
         <div class="contact-form">
             <form action="">
@@ -211,7 +211,7 @@
     </section>
     <!-- Footer -->
     <div class="footer">
-        <h2>Coding Home</h2>
+        <h2>About Ajaykumar</h2>
         <div class="footer-social">
             <a href="#"><i class='bx bxl-linkedin' ></i></a>
             <a href="#"><i class='bx bxl-facebook' ></i></a>
@@ -223,7 +223,7 @@
     </div>
     <!-- Copyright -->
     <div class="copyright">
-        <p>Create By <a href="">Foolish Developer</a> | All Right Reserved.</p>
+        <p>Create By <a href="">G.Ajaykumar</a> | All Right Reserved.</p>
     </div>
  
  
